Fazendo alteração no css e no js

--- a/style.css
+++ b/style.css
@@ -180,3 +180,14 @@ body {
         display: none;
     }
 }
+
+span {
+    font-weight: bold;
+    color: red;
+}
+
+
+#ideal {
+    font-weight: bold;
+    color: green;
+}
